# bubu_cmake

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
src/: list_manager.cpp  list_manager.h
test/: test_list_manager.cpp
